--- a/index.html
+++ b/index.html
@@ -12,13 +12,7 @@
 </head>
 
 <body>
-    <label>Gender:</label>
-    <button id="excel">Download</button>
-    <select id="genderOptions">
-        <option value="male">Male</option>
-        <option value="female">Female</option>
-        <option value="others">Others</option>
-    </select>
+    <button id="excel">Export to Excel</button>
         <table border="1">
             <tr>
                 <th>Profile</th>
