--- a/index.html
+++ b/index.html
@@ -9,19 +9,25 @@
         integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <link href="./assets/css/style.css" rel="stylesheet" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+    <link href="//cdn.datatables.net/2.2.1/css/dataTables.dataTables.min.css" rel="stylesheet" type="text/css">
+    <script src="//cdn.datatables.net/2.2.1/js/dataTables.min.js" type="text/javascript"></script>
+    
 </head>
 
 <body>
     <button id="excel">Export to Excel</button>
-        <table border="1">
+        <table id="person_table">
+            <thead>
             <tr>
                 <th>Profile</th>
                 <th>Name</th>
                 <th>Gender</th>
                 <th>E-mail</th>
             </tr>
+            </thead>
         </table>
     <script src="./assets/js/app.js"></script>
+    
 </body>
 
 </html>
